www: Fix cropped change author avatar image

--- a/www/ui/src/components/ChangeUserAvatar/ChangeUserAvatar.scss
+++ b/www/ui/src/components/ChangeUserAvatar/ChangeUserAvatar.scss
@@ -11,6 +11,7 @@
   img {
     height: 20px;
     width: 20px;
-    background-color: #ccc
+    background-color: #ccc;
+    display: block;
   }
 }
